Prevent momentary view of content behind game if the screen size changes when the user is in fullscreen mode

--- a/src/js/components/Container/style.scss
+++ b/src/js/components/Container/style.scss
@@ -5,11 +5,11 @@ body.fullscreen {
   overflow: hidden;
 
   .container {
-    // height:100vh;
+    height:100vh;
     position: absolute;
     right: 0;
     top: 0;
-    // width: 100vw;
+    width: 100vw;
   }
 }
 
